# terraform-diagram-generator

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
test/: test_main.py
test/docker/: local_file.tf  main.tf  providers.tf  terraform.tfstate  variables.tf
test/docker/expected/: README.md  tf-apply-graph.dot  tf-destroy.dot  tf-plan-refresh.dot  tf_plan.json  tfgraph.dot  tfplan.dot
test/docker/local_file/: existing_file.txt  file_to_delete.txt  file_to_update.txt
test/terraform-aws-eks/: README.md
